--- a/compte-service/pom.xml
+++ b/compte-service/pom.xml
@@ -57,6 +57,11 @@
             <groupId>uahb.m1gl</groupId>
             <artifactId>kafka-data-model</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>${modelmapper.version}</version>
+        </dependency>
     </dependencies>
 
 
