--- a/compte-service/src/main/resources/application.yml
+++ b/compte-service/src/main/resources/application.yml
@@ -1,3 +1,31 @@
+spring:
+  application:
+    name: compte-service
+
+  datasource:
+    url: jdbc:mysql://localhost:3306/compte_db
+    username: root
+    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+
+server:
+  port: 8082
+
+
+springdoc:
+  api-docs:
+    path: /api-docs
+
 kafka-config:
   bootstrap-servers: localhost:19092, localhost:29092, localhost:39092
   schema-registry-url-key: schema.registry.url
